Фикс юнит-тестов